# secrets-manager

./: .gitignore  CLA.md  Cargo.toml  LICENSE  README.md  setup.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  cla.yml  release.yml
clients/go/: README.md  client.go  client_test.go  go.mod
crates/secrets-client/: Cargo.toml
crates/secrets-client/src/: api.rs  cache.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs
crates/secrets-crypto/: Cargo.toml
crates/secrets-crypto/src/: lib.rs
crates/secrets-server/: Cargo.toml
crates/secrets-server/src/: app.rs  audit.rs  auth.rs  commands.rs  config.rs  crypto_state.rs  db.rs  error.rs  handlers.rs  lib.rs  lock.rs  main.rs  repo.rs
crates/secrets-server/tests/: api.rs
deploy/nginx/: secrets-manager.conf
deploy/systemd/: secrets-server.service
docs/: API.md  SECURITY.md
scripts/: quick-start.ps1  rebuild.ps1
