[workspace]
resolver = "2"
members = [
    "crates/secrets-crypto",
    "crates/secrets-server",
    "crates/secrets-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
authors = ["Ahoshinet Groups", "darui3018823"]

[workspace.dependencies]
# Cryptography (RustCrypto only — no custom crypto)
chacha20poly1305 = "0.11"
argon2 = "0.5"
sha2 = "0.11"
subtle = "2.6"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"
base64 = "0.22"

# Client
ureq = { version = "3", features = ["json"] }
url = "2"
toml = "1.1"
dirs = "5"

# Server
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# Serialization / time / errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
anyhow = "1"
thiserror = "2"

# Dev
tempfile = "3"

# Internal
secrets-crypto = { path = "crates/secrets-crypto" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
