[package]
name = "secrets-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Secrets Manager client CLI (fetch secrets, inject into processes)"

[[bin]]
name = "secrets"
path = "src/main.rs"

[lib]
name = "secrets_client"
path = "src/lib.rs"

[dependencies]
ureq.workspace = true
toml.workspace = true
dirs.workspace = true
clap.workspace = true
rpassword.workspace = true

serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
zeroize.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
