[package]
name = "secrets-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Secrets Manager client CLI (fetch secrets, inject into processes)"

[[bin]]
name = "secrets"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "secrets_client"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:clap", "dep:rpassword"]

[dependencies]
secrets-crypto.workspace = true

ureq.workspace = true
toml.workspace = true
dirs.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true

serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
zeroize.workspace = true
thiserror.workspace = true

anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-dpapi = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"

[dev-dependencies]
tempfile.workspace = true
