[package]
name = "secrets-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Security-critical crypto core for Secrets Manager (no I/O, RustCrypto only)"

[dependencies]
chacha20poly1305.workspace = true
argon2.workspace = true
sha2.workspace = true
subtle.workspace = true
rand.workspace = true
zeroize.workspace = true
secrecy.workspace = true
base64.workspace = true
thiserror.workspace = true
